--- a/css/style.css
+++ b/css/style.css
@@ -70,9 +70,164 @@ h2 {
     border-bottom: 1px solid #F4F4F4;
     overflow: hidden;
 } 
+/*  ///////////////////////        select        ///////////////////////    */
+
+.dropcontainer {
+	position:relative;
+	font-size: 15px;
+	color: #919191;
+	} 
+
+.trigger {
+	color: #4A4A4A;
+	padding-left: 46px;
+	padding-top: 1px;
+	font-size: 15px;
+	font-family: "Conv_Roboto-Light",sans-serif;
+	width: 100%;
+	/* background: #fff url(../images/select-arrow-open.png) 98% center no-repeat; */
+	display: block;
+	text-decoration: none;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	-webkit-transition: all 0.5s ease;
+	-moz-transition: all 0.5s ease;
+	-o-transition: all 0.5s ease; 
+	transition: all 0.5s ease;
+	}
+
+.trigger:hover {
+	color: #4A4A4A;
+	/* background: #f5f5f5 url(../images/select-arrow-open.png) 98% center no-repeat; */
+	text-decoration: none;
+	}
+.trigger:active {
+	/* background: #f5f5f5 url(../images/select-arrow-close.png) 98% center no-repeat; */
+	color: #919191;
+	text-decoration: none;
+	}
+.trigger:visited {
+	/* background: #f5f5f5 url(../images/select-arrow-close.png) 98% center no-repeat; */
+	color: #919191;
+	text-decoration: none;
+	}
+.trigger:focus {
+	/* background: #f5f5f5 url(../images/select-arrow-close.png) 98% center no-repeat; */
+	color: #919191;
+	text-decoration: none;
+	}
+.activetrigger {
+	color: #919191;
+	padding-left: 46px;
+	padding-top: 1px;
+	margin-bottom: 10px;
+	width: 100%;
+	font-size: 15px;
+	font-family: "Conv_Roboto-Light",sans-serif;
+	/* background: #f5f5f5 url(../images/select-arrow-close.png) 98% center no-repeat; */
+	text-decoration: none;
+	display: block;
+    letter-spacing: normal;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	}
+
+.activetrigger:hover {
+	/* background: #f5f5f5 url(../images/select-arrow-close.png) 98% center no-repeat; */
+	color: #919191;
+	text-decoration: none;
+	}
+
+.activetrigger:active {
+	/* background: #f5f5f5 url(../images/select-arrow-close.png) 98% center no-repeat; */
+	color: #919191;
+	text-decoration: none;
+	}
+.activetrigger:visited {
+	/* background: #f5f5f5 url(../images/select-arrow-close.png) 98% center no-repeat; */
+	color: #919191;
+	text-decoration: none;
+	}
+.activetrigger:focus {
+	/* background: #f5f5f5 url(../images/select-arrow-close.png) 98% center no-repeat; */
+	color: #919191;
+	text-decoration: none;
+	}
+
+.dropcontainer ul {	
+	font-size: 15px;
+	font-family: "Conv_Roboto-Light",sans-serif;
+    font-weight: 300;
+	/* border: 1px solid #ccc; */
+	background: #fff;
+	list-style-type: none;
+	padding: 10px;
+	margin: 0;
+	width: 100%;
+    letter-spacing: normal;
+	/* z-index: 100; */
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	
+	}
+
+.dropcontainer ul li {
+	padding: 5px;
+	-webkit-transition: all 0.5s ease; 
+	-moz-transition: all 0.5s ease; 
+	-o-transition: all 0.5s ease; 
+	transition: all 0.5s ease;
+	padding-left: 30px;
+	}
+.dropcontainer ul li  a {
+	font-size: 14px;
+	font-family: "Conv_Roboto-Light",sans-serif;
+    font-weight: 300;
+	text-decoration: none;
+	color: #4A4A4A;
+}
+.dropcontainer ul li:hover {
+	/* background: #f5f5f5; */
+	outline: none;
+	}
+.dropcontainer ul li:hover a {
+	padding: 3px;
+	border: 1px solid #ccc;
+	color: color: #878787;
+	-webkit-border-radius: 7px;
+	-moz-border-radius: 7px;
+	border-radius: 7px;
+}
+.dropcontainer ul li:first-child {
+	display: none;
+	}
+
+.dropcontainer ul li:last-child {
+	border-bottom: none;
+	}
+
+.dropdownhidden {
+	display: none;
+	}
+
+.dropdownvisible {
+	box-shadow: 0 0 22px 6px #EDEDED;
+	height: auto;
+	width: 100%;
+	position: absolute;
+	/* overflow-y: scroll; */
+	}
+
+/*  ///////////////////////        select        ///////////////////////    */
+
 .info-box1 {
     display: block;	
-    overflow: hidden;
     padding-top: 60px;
     padding-left: 0;
     padding-right: 0;
@@ -83,26 +238,26 @@ h2 {
     white-space: nowrap;
     box-sizing: border-box;
     min-width: 178px;
+    text-decoration: none;
 }
 .info-select-box {
     display: block;
     position: relative;
-    width: 160px;
-    overflow: hidden; 
+    width: 190px; 
     font-family: "Conv_Conv_Roboto-Light-Light",sans-serif;
     font-weight: 300;
-    color: #919191;
+    color: #4A4A4A;
     float: left;
 }
 .info-select-box option {
     font-family: "Conv_Conv_Roboto-Light-Light",sans-serif;
     font-weight: 300;
-    color: #919191;   
+    color: #4A4A4A;   
 }
 .info-select-box .select-cursor {
     position: absolute;
-    top: -6px;
-    right: 135px;
+    top: -4px;
+    right: 153px;
     font-size: 23px;
 }
 .select-cursor {
@@ -129,7 +284,8 @@ h2 {
 }
 .info-box1 .personal-account {
     display: inline-block;
-    min-width: 140px;   
+    min-width: 140px;
+    padding-left: 25px;
 }
 .personal-account a {
     font-size: 15px;
@@ -188,6 +344,7 @@ h2 {
     position: relative;
     z-index: 1;
     opacity: 0.87;
+    cursor: context-menu;
 }
 .select:hover{
     opacity: 1;
@@ -195,22 +352,63 @@ h2 {
 .select-box {
 	display: inline-block;
     position: relative;   
-    overflow: hidden;
+/*    overflow: hidden;*/
     border-radius: 6px; 
     padding-bottom: 33px;
     width: 260px;
 }
 .select-box .select-box1 {
     display: block;
-    overflow: hidden;
 	height: 44px;
+    background: #fff;
+    border-bottom: 2px solid #3978C8;
     -webkit-border-radius: 6px;
     -ms-border-radius: 6px;
     -o-border-radius: 6px;
     border-radius: 6px;
     
 }
-.select-box a{
+.select-box .select-box1 .dropcontainer ul {
+    top:-4px;
+    box-shadow: none;
+    border-bottom: 2px solid #3978C8;
+}
+.select-box .select-box1 .dropcontainer ul li {
+    padding:2px 2px 2px 18px;
+    text-align: left;
+    font-size: 14px;
+}
+.select-box .select-box1 .dropcontainer .dropdownvisible {
+	height: auto;
+	width: 100%;
+	position: absolute;
+    overflow-y: scroll; 
+}
+.select-box .select-box1 .trigger {
+    display: block;
+    letter-spacing: normal;
+    text-decoration: none;
+    height: 44px;
+    padding: 11px 0;
+    font-size: 14px;
+}
+.select-box .select-box1 .activetrigger {
+    display: block;
+    letter-spacing: normal;
+    text-decoration: none;
+    height: 44px;
+    padding: 11px 0;
+    font-size: 14px;
+}
+.select-box .select-box1 .activetrigger:hover {
+    display: block;
+    letter-spacing: normal;
+    text-decoration: none;
+    height: 44px;
+    padding: 11px 0;
+    font-size: 14px;
+}
+.select .select-box:last-child a{
     display: block;
     position: absolute;
     color: #fff;
@@ -218,7 +416,7 @@ h2 {
     left: 65px;
     bottom: 0;
 }
-.select-box a:hover {
+.select .select-box:last-child a:hover {
     text-decoration: underline ;
 }
 .select-box select option {
@@ -227,6 +425,8 @@ h2 {
 }
 .select .select-box:last-child {
 	width: 263px;
+    position: relative;
+    top: 3px;
 }
 .select-cursor {
 	display: block;
@@ -725,4 +925,5 @@ footer {
     padding-top: 15px;
     vertical-align: bottom;
 }
+
 
