--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -14,3 +14,8 @@
         padding-bottom: 50px;
     }
 }
+@media only screen and (max-width:768px) {
+    .add-company a {
+        margin-left: 25px;
+    }
+}
