--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,6 @@ h2 {
 	color: #919191;
 	padding-left: 46px;
 	padding-top: 1px;
-	margin-bottom: 10px;
 	width: 100%;
 	font-size: 15px;
 	font-family: "Conv_Roboto-Light",sans-serif;
@@ -167,7 +166,7 @@ h2 {
 	margin: 0;
 	width: 100%;
     letter-spacing: normal;
-	/* z-index: 100; */
+    z-index: 100; 
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
@@ -221,6 +220,7 @@ h2 {
 	height: auto;
 	width: 100%;
 	position: absolute;
+    top: 10px;
 	/* overflow-y: scroll; */
 	}
 
@@ -382,6 +382,7 @@ h2 {
 	height: auto;
 	width: 100%;
 	position: absolute;
+    top: 4px;
     overflow-y: scroll; 
 }
 .select-box .select-box1 .trigger {
