--- a/css/style.css
+++ b/css/style.css
@@ -712,7 +712,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', end
 
 /*       //////////////////        Сейчас ищут             ////////////////               */
 .now-search {
-	background: #FBFBFB;
+	background: #F4F4F4;
 }
 .now-search h2 {
     text-align: center;
@@ -763,22 +763,23 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', end
     padding-right: 6px;
 }
 .now-search-button {
-    max-width: 260px;
+    max-width: 750px;
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 50px;
     padding-top: 50px;
+    text-align: center;
 }
 .now-search-button span {
-    display: block;
+    display: inline-block;
     text-align: center;
-    margin-bottom: 20px;
-    margin-top: 20px;
+    margin: 10px 20px 20px 20px;
     font-size: 18px;
     color: #828282;
 }
 .now-search-button1 {
-    display: block;
+    display: inline-block;
+    float: left;
     width: 260px;
     height: 44px;
     background: #de1e29;
@@ -800,6 +801,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', end
     -webkit-box-shadow: 1px 1px 0px 1px #812c30;
     -moz-box-shadow: 1px 1px 0px 1px #812c30;
     border: none;
+    background: #E4242F;
     background: /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#de1e29+1,db6b71+45,207cca+100,207cca+100,de1e29+100&1+0,0.97+100 */
 background: -moz-linear-gradient(top,  rgba(222,30,41,1) 0%, rgba(222,30,41,1) 1%, rgba(219,107,113,0.99) 45%, rgba(222,30,41,0.97) 100%); /* FF3.6-15 */
 background: -webkit-linear-gradient(top,  rgba(222,30,41,1) 0%,rgba(222,30,41,1) 1%,rgba(219,107,113,0.99) 45%,rgba(222,30,41,0.97) 100%); /* Chrome10-25,Safari5.1-6 */
@@ -807,7 +809,8 @@ background: linear-gradient(to bottom,  rgba(222,30,41,1) 0%,rgba(222,30,41,1) 1
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', endColorstr='#f7de1e29',GradientType=0 ); /* IE6-9 */
 }
 .now-search-button2 {
-    display: block;
+    display: inline-block;
+    float: right;
     width: 260px;
     height: 44px;
     background: #FBFBFB;
