--- a/css/style.css
+++ b/css/style.css
@@ -483,18 +483,30 @@ h2 {
     -o-box-shadow: 0px 2px 0 0 #B72025;
     box-shadow: 0px 2px 0 0 #B72025;
 }
-.select-button:hover {
+.class-both {
+     /*
    background: /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#de1e29+1,db6b71+45,207cca+100,207cca+100,de1e29+100&1+0,0.97+100 */
 background: -moz-linear-gradient(top,  rgba(222,30,41,1) 0%, rgba(222,30,41,1) 1%, rgba(219,107,113,0.99) 45%, rgba(222,30,41,0.97) 100%); /* FF3.6-15 */
 background: -webkit-linear-gradient(top,  rgba(222,30,41,1) 0%,rgba(222,30,41,1) 1%,rgba(219,107,113,0.99) 45%,rgba(222,30,41,0.97) 100%); /* Chrome10-25,Safari5.1-6 */
 background: linear-gradient(to bottom,  rgba(222,30,41,1) 0%,rgba(222,30,41,1) 1%,rgba(219,107,113,0.99) 45%,rgba(222,30,41,0.97) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', endColorstr='#f7de1e29',GradientType=0 ); /* IE6-9 */
+    */
+}
+.select-button:hover {
+   
+    box-shadow: 0px 0px 3px 1px #812c30;
+    -webkit-box-shadow: 0px 0px 3px 1px #812c30;
+    -moz-box-shadow: 0px 0px 3px 1px #812c30;
+    -ms-box-shadow: 0px 0px 3px 1px #812c30;
+    -o-box-shadow: 0px 0px 3px 1px #812c30;  
     
+/*
     box-shadow: 1px 1px 0px 1px #812c30;
     -webkit-box-shadow: 1px 1px 0px 1px #812c30;
     -moz-box-shadow: 1px 1px 0px 1px #812c30;
     -ms-box-shadow: 1px 1px 0px 1px #812c30;
     -o-box-shadow: 1px 1px 0px 1px #812c30;  
+*/
 }
 .select-button:active{
     border: none;
@@ -827,13 +839,15 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', end
 /*        ///////////////////////     Footer - Подвал      ///////////////////////     */
 
 footer {
-    min-height: 394px;
+/*    min-height: 394px;*/
+    min-height: 291px
     width: 100%;
     background: #353535;
 }
 .footer {
 	width: 100%;
-    min-height: 343px;
+/*    min-height: 343px;*/
+    min-height: 240px;
 }
 .footer h6 {
 	color: #fff;
@@ -858,7 +872,7 @@ footer {
     list-style: none;  
 }
 .footer-content ul li a {
-    font-size: 12px;
+    font-size: 13px;
 }
 .footer-content:first-child ul li:nth-child(3){
     margin-bottom: 15px;
