--- a/css/style.css
+++ b/css/style.css
@@ -493,12 +493,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', end
     */
 }
 .select-button:hover {
-   
-    box-shadow: 0px 0px 3px 1px #812c30;
-    -webkit-box-shadow: 0px 0px 3px 1px #812c30;
-    -moz-box-shadow: 0px 0px 3px 1px #812c30;
-    -ms-box-shadow: 0px 0px 3px 1px #812c30;
-    -o-box-shadow: 0px 0px 3px 1px #812c30;  
+    background: #e4242f;
+    
     
 /*
     box-shadow: 1px 1px 0px 1px #812c30;
@@ -510,11 +506,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', end
 }
 .select-button:active{
     border: none;
-    background: /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#de1e29+1,db6b71+45,207cca+100,207cca+100,de1e29+100&1+0,0.97+100 */
-background: -moz-linear-gradient(top,  rgba(222,30,41,1) 0%, rgba(222,30,41,1) 1%, rgba(219,107,113,0.99) 45%, rgba(222,30,41,0.97) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top,  rgba(222,30,41,1) 0%,rgba(222,30,41,1) 1%,rgba(219,107,113,0.99) 45%,rgba(222,30,41,0.97) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom,  rgba(222,30,41,1) 0%,rgba(222,30,41,1) 1%,rgba(219,107,113,0.99) 45%,rgba(222,30,41,0.97) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', endColorstr='#f7de1e29',GradientType=0 ); /* IE6-9 */
+   box-shadow: 0px 0px 3px 1px #812c30;
+    -webkit-box-shadow: 0px 0px 3px 1px #812c30;
+    -moz-box-shadow: 0px 0px 3px 1px #812c30;
+    -ms-box-shadow: 0px 0px 3px 1px #812c30;
+    -o-box-shadow: 0px 0px 3px 1px #812c30;  
 }
 
 /*    ///////////////////////        Значения иконок       ///////////////         */
@@ -809,16 +805,18 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', end
     box-shadow: 0px 2px 0 0 #B72025;
 }
 .now-search-button1:hover {
-    box-shadow: 1px 1px 0px 1px #812c30;
-    -webkit-box-shadow: 1px 1px 0px 1px #812c30;
-    -moz-box-shadow: 1px 1px 0px 1px #812c30;
+    box-shadow: 0px 0px 3px 1px #812c30;
+    -webkit-box-shadow: 0px 0px 3px 1px #812c30;
+    -moz-box-shadow: 0px 0px 3px 1px #812c30;
+    -ms-box-shadow: 0px 0px 3px 1px #812c30;
+    -o-box-shadow: 0px 0px 3px 1px #812c30;  
     border: none;
-    background: #E4242F;
-    background: /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#de1e29+1,db6b71+45,207cca+100,207cca+100,de1e29+100&1+0,0.97+100 */
-background: -moz-linear-gradient(top,  rgba(222,30,41,1) 0%, rgba(222,30,41,1) 1%, rgba(219,107,113,0.99) 45%, rgba(222,30,41,0.97) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top,  rgba(222,30,41,1) 0%,rgba(222,30,41,1) 1%,rgba(219,107,113,0.99) 45%,rgba(222,30,41,0.97) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom,  rgba(222,30,41,1) 0%,rgba(222,30,41,1) 1%,rgba(219,107,113,0.99) 45%,rgba(222,30,41,0.97) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', endColorstr='#f7de1e29',GradientType=0 ); /* IE6-9 */
+    background: #E4242F;   
+}
+.now-search-button1:active {
+    box-shadow: none;
+    border: none;
+    background: #E4242F;   
 }
 .now-search-button2 {
     display: inline-block;
@@ -874,6 +872,30 @@ footer {
 .footer-content ul li a {
     font-size: 13px;
 }
+.submit_button {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 1480px;
+  height: 3370px;
+  z-index: 166;
+}
+.Найти {
+  font-size: 24px;
+  font-family: "Eurofurencebold";
+  color: rgb(254, 254, 254);
+  line-height: 1.2;
+  text-align: center;
+  -moz-transform: matrix( 0.96085409252669,0,0,1,0,0);
+  -webkit-transform: matrix( 0.96085409252669,0,0,1,0,0);
+  -ms-transform: matrix( 0.96085409252669,0,0,1,0,0);
+  position: absolute;
+  left: 1001.932px;
+  top: 400.6px;
+  z-index: 165;
+}
+
+
 .footer-content:first-child ul li:nth-child(3){
     margin-bottom: 15px;
 }
