--- a/css/style.css
+++ b/css/style.css
@@ -873,20 +873,7 @@ footer {
   height: 3370px;
   z-index: 166;
 }
-.Найти {
-  font-size: 24px;
-  font-family: "Eurofurencebold";
-  color: rgb(254, 254, 254);
-  line-height: 1.2;
-  text-align: center;
-  -moz-transform: matrix( 0.96085409252669,0,0,1,0,0);
-  -webkit-transform: matrix( 0.96085409252669,0,0,1,0,0);
-  -ms-transform: matrix( 0.96085409252669,0,0,1,0,0);
-  position: absolute;
-  left: 1001.932px;
-  top: 400.6px;
-  z-index: 165;
-}
+
 
 
 .footer-content:first-child ul li:nth-child(3){
@@ -904,7 +891,8 @@ footer {
     font-size: 14px;
 }
 .footer-content ul a:hover{
-    text-decoration: underline;
+    text-decoration: none;
+    color: #787878;
 }
 .footer-box2{
     height: 100%;     
@@ -925,6 +913,14 @@ footer {
     border-bottom: 1px dashed #666666;
     padding-bottom: 5px;
     margin-left: 35px;
+}
+.footer-box2 .qwestion h6:hover {
+    display: block;
+    float: left;
+    border-bottom: 1px dashed #666666;
+    padding-bottom: 5px;
+    margin-left: 35px;
+    color: #787878;
 }
 .footer-box2 .qwestion img{
     display: block;
